# prototype

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_data.csv  test_execution.py  test_run.py
pocketscientist/: __init__.py  cli.py  notebook_builder.py  orchestrator.py  report_generator.py
pocketscientist/agents/: __init__.py  analysis_report.py  base.py  base_old.py  business_understanding.py  coordinator.py  data_preparation.py  data_understanding.py  deployment_preparation.py  evaluation.py  modeling.py
pocketscientist/execution/: __init__.py  cell_executor.py
pocketscientist/llm/: __init__.py  base.py  factory.py  ollama.py
pocketscientist/utils/: __init__.py  safety.py  validation.py
